--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
         <td>
           <img
-            src="/Users/aaronf/Web Development/static/my_profile_pic.png"
+            src="/static/my_profile_pic.png"
             width="300"
             height="300"
             alt="Aaron's profile picture"
